<resources>
    <string name="app_name">Clinic Lite</string>
    <string name="url" translatable="false">http://192.168.1.107:777/</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="upload_image">Upload Image</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_galley">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="appwidget_text">Add Image</string>
    <string name="username_error_msg">Enter user name</string>
    <string name="password_error_msg">Enter password</string>
    <string name="network_off_alert">Please turn on network</string>
    <string name="ok_button">OK</string>
    <string name="wait">Please wait . . .</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="success">Success</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="login_instruction">Please Login</string>
    <string name="enter_description">Enter a description</string>
    <string name="select_visit">Select visit</string>
    <string name="logout_confirm">Do you want to logout?</string>
    <string name="photo">Case Images</string>
    <string name="appointments">Appointments</string>
    <string name="remainders">Remainders</string>
    <string name="schedule">Schedules</string>

    <string name="search_patient">Search Patient</string>
    <string name="search">Search Here</string>
    <string name="btnadvncesearch">Advanced Search</string>
    <string name="btnsearch">Search</string>
    <string name="btnback">Back</string>
    <string name="NoSchedules">No Schedules</string>
    <string name="NoSchedulesToday"> No Schedules Today</string>
    <string name="noresults">You don\'t have any patients \nappointment\'s on %1$s</string>
    <string name="choosemonth">Choose Month</string>
    <string name="ScheduledTimes">Scheduled Times</string>

    <string name="minDate">01/01/2016</string>
    <string name="maxDate">12/31/2030</string>

</resources>
