<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.thrithvam.theclinicapp.AddImage">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/addAttach"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorbackground">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/newImage"
            android:src="@drawable/folder"
            android:padding="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="size"
            android:id="@+id/fileSize"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorAccent" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/enter_description"
            android:maxLength="300"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorTextbackgroundgray"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorPrimary"
          />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fileName"
            android:visibility="invisible"
            android:hint="@string/enter_file_name"
            android:singleLine="true"
            android:layout_above="@+id/description"
            android:background="#a2008709"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorPrimary"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/imageView3"
            android:layout_below="@+id/fileSize"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/rotateoption"
            android:onClick="rotateImage"/>
    </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:id="@+id/addAttach"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="Upload"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white" />


</RelativeLayout>
