<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tech.thrithvam.theclinicapp.Home"
    android:background="@color/colorbackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:onClick="goaddImage">
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="2dp"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="4dp"
                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:id="@+id/imagePhoto"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/caseimage"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/imagePhoto"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/photo"
                                android:id="@+id/imgBtntext1"
                                android:gravity="center_horizontal"
                                android:textColor="@color/colorPrimary"/>

                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:onClick="goAppointments">
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="2dp"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="4dp"
                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:src="@drawable/appointments2"
                                android:id="@+id/imgAppointments"
                                android:layout_centerVertical="true"
                                android:layout_centerHorizontal="true"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/imgAppointments"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/appointments"
                                android:id="@+id/imgBtntext2"
                                android:gravity="center_horizontal"
                                android:textColor="@color/colorPrimary"/>

                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:onClick="goSchedules">
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="2dp"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="4dp"

                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:src="@drawable/schedules2"
                                android:id="@+id/imgSchedules"
                                android:layout_centerVertical="true"
                                android:layout_centerHorizontal="true"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/imgSchedules"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:id="@+id/imgBtntext3"
                                android:gravity="center_horizontal"
                                android:textColor="@color/colorPrimary"
                                android:text="@string/schedule" />

                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:onClick="goRemainders">
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="2dp"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="4dp"
                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:src="@drawable/remainder2"
                                android:id="@+id/imgRemainders"
                                android:layout_centerVertical="true"
                                android:layout_centerHorizontal="true"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/imgRemainders"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/remainders"
                                android:id="@+id/imgBtntext4"
                                android:gravity="center_horizontal"
                                android:textColor="@color/colorPrimary"/>

                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </TableRow>
        </TableLayout>

    </ScrollView>
</RelativeLayout>
